asking questions eng

--- a/lessons.html
+++ b/lessons.html
@@ -1428,6 +1428,86 @@
             </div>
           </div>
         </div>
+        <div class="container">
+          <button class="acc lesson lesson--askingQuestions">Asking questions</button>
+          <div class="panel">
+            <h2>Asking questions</h2>
+            <p>It’s good to know how to explain things or state facts. However, as a foreigner in another country, you
+              will probably have a lot of questions to ask! This lesson is aiming to assist you in that - you will learn
+              the basics of asking both simple yes/no questions, and more complicated open questions.</p>
+            <p>Before we dive deep into the grammar, let me say something about the attitude of Polish people to asking
+              questions. Unlike many Asian languages, where extra care has to be taken to choose the polite grammatical
+              structure, or some Western languages such as British English where a lot of questions are implied
+              indirectly, Polish people use many simple, direct questions in their daily life. You don’t need to be
+              afraid of asking a <i>bad question</i> in most cases - just use the simplest you can think of and we will
+              be happy to answer!</p>
+            <h3>1. Yes/no questions</h3>
+            <p>These are as simple as they can get. Consider a simple affirmative sentence. <br><br>
+              Anna pracuje w banku. - Anna works at a bank. <br><br>
+              To turn it into a question, you have 2 options. <br>
+              a) Casual/spoken way: just raise the tone of the voice, like if you were asking a question in English, or
+              using the second tone in Chinese. <br>
+              Anna pracuje w banku↑? <br>
+              Does Anna work at a bank? <br>
+              To express that you are almost certain about the aforementioned fact, and just want somebody to confirm
+              it, you can also add prawda? (<i>right?</i>) at the end of the sentence.
+              Anna pracuje w banku, prawda↑? <br>
+              Anna works at a bank, right?/doesn’t she? <br><br>
+              b) Formal / written way: add czy at the beginning of the sentence. Note that the intonation characteristic
+              for asking questions remains. <br><br>
+              Czy Anna pracuje w banku↑? <br>
+              Does Anna work at a bank?<br>
+            </p>
+            <h3>2. Open questions</h3>
+            <p>These are used for inquiring about something in more detail. The most common “question words”, also called interrogative pronouns - zaimki pytające - are:
+            </p>
+            <ul>
+              <li>Co? - What?</li>
+              <li>Gdzie? - Where?</li>
+              <li><span lang="pl">Dokąd</span>? - Where to?</li>
+              <li>Kiedy? - When?</li>
+              <li>Jak? - How?</li>
+              <li>Jaki/Jaka/Jakie? - What kind of? (masculine/feminine/neutral)</li>
+              <li>Który/która/które? - Which? (masculine/feminine/neutral)</li>
+              <li>Dlaczego? - Why?</li>
+              <li>Po co? - What for?</li>
+              <li>Ile? - How much/many?</li>
+            </ul>
+            <p>The usual word order is the same as normally, with a question worded added at the beginning: <br><br>
+              Question word + (subject) + verb + object <br><br>
+              Note: only include the subject if it is not known from context. Do not use 2nd person: ty (you, singular) or wy (you, plural) explicitly. <br><br>
+              The usage does not different in different tenses: past, present and future sentences all have the same question structure.
+            </p>
+            <ul>
+              <li><b>Co</b> (ty) chcesz na prezent? - What do you want as a present?</li>
+              <li><b>Gdzie</b> mieszka <span lang="pl">twój</span> brat? - Where does your brother live? (being in a place)</li>
+              <li><span lang="pl"><b>Dokąd</b></span> jedziecie na wakacje? - Where are you going for holidays? (movement to a place)</li>
+              <li><b>Kiedy</b> <span lang="pl">dostałeś tę paczkę</span>? - When did you get this parcel?</li>
+              <li><b>Jak</b> <span lang="pl">upiekłeś</span> to ciasto? - How did you bake this cake?</li>
+              <li><b>Jakie</b> filmy lubisz <span lang="pl">oglądać</span>? - What kind of films do you enjoy watching? *</li>
+              <li><span lang="pl"><b>Którą</b> porę</span> roku lubisz najbardziej? - Which season of the year do you like the most? *</li>
+              <li><b>Dlaczego</b> <span lang="pl">wyjechałaś za granicę</span>? - Why did you go abroad (emigrate)? (what is the reason?)</li>
+              <li><b>Po co</b> Robert jedzie do Warszawy? - What is Robert going to Warsaw for? (what is his aim?)</li>
+              <li><b>Ile</b> mleka mamy w domu? - How much milk do we have in our house?</li>
+            </ul>
+            <p>* These 2 interrogative pronouns are subject to declension. See the declension table to find out which form to use. <br><br><br>
+              When using the verb to be with the pronouns <i>kiedy, gdzie, jaki, który</i>, the verb and the subject are usually reversed. The order is: <br><br>
+              Question word +  verb + (subject) + object <br><br>
+              Gdzie jest twoja siostra? - Where is your sister? <br>
+              NOT Gdzie twoja siostra jest? <br><br>
+              Kiedy jest jej <span lang="pl">ślub</span>? - When is her wedding? <br>
+NOT Kiedy jej <span lang="pl">ślub</span> jest? <br><br>
+These are the most common questions you will use - they cover the most of daily situations.Now, it’s your turn to practice asking them! Try to turn the sentences from previous lessons into sentences first, and when you gain confidence, you can start asking your own. As the proverb says - <i>nie ma głupich pytań! (There are no stupid questions!)</i>
+
+
+              </p>
+
+            <div class="sign">
+              <p class="sign--person">written by</p>
+              <a href="about.html" target="_blank">@Weronika</a>
+            </div>
+          </div>
+        </div>
         <!-- <button class="accordion-4">acc lesson 3</button>
         <div class="panel">
           <h2>acc lesson 3</h2><br>
