--- a/jp/lessons.html
+++ b/jp/lessons.html
@@ -2384,6 +2384,75 @@
             </div>
           </div>
         </div>
+        <div class="container">
+          <button class="acc lesson lesson--askingQuestions">質問をする</button>
+          <div class="panel">
+            <h2>質問をする</h2>
+            <p>物事を説明したり、事実を述べたりする方法を知っておくのはとても大切な事です。また、海外へ行った時には、おそらくたくさん質問をする機会があると思います。このレッスンでは基本的なYes/Noの質問と、疑問詞を用いた質問を学んでいきます。一緒に頑張りましょう！</p>
+            <p>文法を深く掘り下げる前に、質問をする時のポーランド人の姿勢(態度)についてお話ししましょう。丁寧な文法を使うために特別な注意を払う必要がある多くのアジアの言語や、多くの質問が間接的に表現されるイギリス英語や一部の西洋言語とは異なり、ポーランドの人々は単純で直接的な質問の仕方をします。ストレートな表現だと相手に失礼かも…と思って質問をすることを恐れる必要はありません。最も単純な質問方法で聞いてくれれば、私たちポーランド人は喜んでお答えします。</p>
+            <h3>1. Yes/Noの質問</h3>
+            <p>ではまず、簡単な文章を見てみましょう。 <br><br>
+              Anna pracuje w banku. - アンナは銀行で働いています。<br><br>
+              この文章を質問に言い換える場合、2通りの方法があります。 <br>
+              a) カジュアル/話し言葉：英語で質問する時と同じように、声のトーンを上げる方法です。中国語でいうと、2番目のトーンを使用する時と同じような感じです。 <br>
+              Anna pracuje w banku↑? <br>
+              アンナは銀行で働いていますか？(最後の単語の声のトーンを上げる) <br>
+              また、質問したい内容についての事実にほぼ確信があり、誰かに確認してもらいたいということを表現する場合は、「prawda(英語でいうright？)」を文章の最後に追加することができます。<br>
+              Anna pracuje w banku, prawda↑? <br>
+              アンナは銀行で働いているのですよね？ <br><br>
+              b) 正式/文語的な表現：文の先頭に「czy」を追加します。また、 質問をする時のイントネーションの特徴は上記 a) と同様です。<br><br>
+              Czy Anna pracuje w banku↑? <br>
+              アンナは銀行で働いていますか？<br>
+            </p>
+            <h3>疑問詞を用いた質問</h3>
+            <p>質問したい事柄について、より詳細に尋ねる場合に使用されます。これは「疑問詞(<span lang="pl"> zaimki pytające</span> )」と呼ばれます。では、一般的な疑問詞をお教えします。
+            </p>
+            <ul>
+              <li>Co? - 何？</li>
+              <li>Gdzie? - どこ？</li>
+              <li><span lang="pl">Dokąd</span>? - どこに？</li>
+              <li>Kiedy? - いつ？</li>
+              <li>Jak? - どのように？</li>
+              <li>Jaki/Jaka/Jakie? - どのような？(男性形/女性形/中性形)</li>
+              <li>Który/która/które? - Which? (masculine/feminine/neutral)</li>
+              <li>Dlaczego? - なぜ？</li>
+              <li>Po co? - 何のために？</li>
+              <li>Ile? - どのくらい？/ いくら？(いくつ？)</li>
+            </ul>
+            <p>語順は通常と同じですが、文章の始めに疑問詞が追加されます。 <br><br>
+              疑問詞+（主語）+動詞+形容詞 <br><br>
+              注意：主語は、文脈からわからない場合にのみ含めてください。 また、2人称の「ty（あなた、単数形）」「wy（あなた、複数形）」は使用しないで下さい。
+              <br><br>
+              質問では時制は適用されません。過去形、現在形、未来形のすべてで同じ質問構造が使用されます。
+            </p>
+            <ul>
+              <li><b>Co</b> (ty) chcesz na prezent? - プレゼントは何が欲しいですか？</li>
+              <li><b>Gdzie</b> mieszka <span lang="pl">twój</span> brat? - 兄弟はどこに住んでいますか？(住んでいる場所)</li>
+              <li><span lang="pl"><b>Dokąd</b></span> jedziecie na wakacje? - 休日はどこに行きますか？(場所の移動)</li>
+              <li><b>Kiedy</b> <span lang="pl">dostałeś tę paczkę</span>? - この荷物をいつ受け取りましたか？</li>
+              <li><b>Jak</b> <span lang="pl">upiekłeś</span> to ciasto? - どのようにこのケーキを焼きましたか？</li>
+              <li><b>Jakie</b> filmy lubisz <span lang="pl">oglądać</span>? - どんなジャンルの映画を観るのが楽しいですか？＊ </li>
+              <li><span lang="pl"><b>Którą</b> porę</span> roku lubisz najbardziej? - どの季節が一番好きですか？＊</li>
+              <li><b>Dlaczego</b> <span lang="pl">wyjechałaś za granicę</span>? - なぜ海外に行ったのですが？/移住したのですか？(理由)</li>
+              <li><b>Po co</b> Robert jedzie do Warszawy? - ロバートは何のためにワルシャワに行くのですか？(彼の目的は何ですか？)</li>
+              <li><b>Ile</b> mleka mamy w domu? - 家に牛乳はどのくらいありますか？</li>
+            </ul>
+            <p>これら2つの疑問代名詞は語形変化の対象になります。使用するフォームについては、語形変化表を参考にしてください。 <br><br><br>
+              動詞と代名詞「kiedy, gdzie、jaki、który」を一緒に使用する場合、動詞と主語の順番は逆になります。 語順は次の通りです。 <br><br>
+              疑問詞+動詞+（主語）+形容詞 <br><br>
+              Gdzie jest twoja siostra? - あなたの姉妹はどこですか？ <br>
+              Gdzie twoja siostra jest? ではありません。 <br><br>
+              Kiedy jest jej <span lang="pl">ślub</span>? - 彼女の結婚式はいつですか？ <br>
+Kiedy jej <span lang="pl">ślub</span> jest? ではありません。 <br><br>
+以上が、最も使用する機会がある一般的な質問でした。これらをマスターすれば、日常生活をする上でほとんど問題がなくなるでしょう。まずは、前回のレッスンの文章を質問に変換して練習してください。「nie ma głupich pytań！(愚かな質問はない！）」ということわざもある通り、恐れずたくさん質問をして自信をつけていきましょう！
+              </p>
+
+            <div class="sign">
+              <p class="sign--person">作成者:</p>
+              <a href="about.html" target="_blank">@ウェロニカ</a>
+            </div>
+          </div>
+        </div>
         <div class="reportButton">
           <button class="report" onclick="report()">レポート</button>
         </div>
