updated about page

--- a/about.html
+++ b/about.html
@@ -74,8 +74,12 @@
                                 Saki and Robert are Polish-Japanese couple trying to share their knowledge with others.
                             </p>
                         </div>
-                        <div id="root" lang="en"></div>
-                        <script type="module" src="./assets/js/about.js"></script>
+                        <div id="root"></div>
+                        <div class="modal">
+                            <div class="modal-container">
+                            </div>
+                        </div>
+                        <script src="./assets/js/about.js"></script>
                         <div class="footer-about">
                             <p>If you want to support us please visit our page <a href="support_us.html">SUPPORT US</a>
                             </p>
