--- a/ch/about.html
+++ b/ch/about.html
@@ -70,8 +70,12 @@
                                 婚夫妇，他们在这个网站努力分享他们的知识。
                             </p>
                         </div>
-                        <div id="root" lang="zh"></div>
-                        <script type="module" src="./../assets/js/about.js"></script>
+                        <div id="root"></div>
+                        <div class="modal">
+                            <div class="modal-container">
+                            </div>
+                        </div>
+                        <script src="./../assets/js/about.js"></script>
                         <div class="footer-about">
                             <p>如果你想对我们给予支持，请点击 <a href="support_us.html">支持我们</a>
                             </p>
