--- a/jp/about.html
+++ b/jp/about.html
@@ -68,8 +68,12 @@
                 ”SARO” の由来ですが、このサイトを運営する” SAKI (沙季) ”と” ROBERT (ロバート)“ の日本人・ポーランド人カップルの頭文字からなっています。<br>
                 このサイトを通じてポーランドの魅力が伝わり、興味を持ってもらえると嬉しいです。</p>
             </div>
-            <div id="root" lang="ja"></div>
-            <script type="module" src="./../assets/js/about.js"></script>
+            <div id="root"></div>
+            <div class="modal">
+              <div class="modal-container">
+              </div>
+            </div>
+            <script src="./../assets/js/about.js"></script>
             <div class="footer-about">
               <p>私たちのサイト運営にご協力してくださる方は、<a href="support_us.html" target="_self">【ご協力はこちら】</a>へお進み下さい。<br>
 
