--- a/vi/about.html
+++ b/vi/about.html
@@ -73,8 +73,12 @@
                                 kiến thức của mình đến với mọi người xung quanh...
                             </p>
                         </div>
-                        <div id="root" lang="vi"></div>
-                        <script type="module" src="./../assets/js/about.js"></script>
+                        <div id="root"></div>
+                        <div class="modal">
+                            <div class="modal-container">
+                            </div>
+                        </div>
+                        <script src="./../assets/js/about.js"></script>
                         <div class="footer-about">
                             <p>Nếu bạn muốn ủng hộ chúng tôi, hãy ghé qua trang web này <a href="support_us.html">ỦNG HỘ
                                     CHÚNG TÔI</a>
