--- a/about.html
+++ b/about.html
@@ -59,7 +59,6 @@
         <section class="about">
             <div class="wrapper">
                 <h1>About</h1>
-                <br>
                 <article>
                     <div class="container about">
                         <div class="introduce">
@@ -76,8 +75,7 @@
                         </div>
                         <div id="root"></div>
                         <div class="modal">
-                            <div class="modal-container">
-                            </div>
+                            <div class="modal-container"></div>
                         </div>
                         <script src="./assets/js/about.js"></script>
                         <div class="footer-about">
