fixed Chinese translation

--- a/ch/lessons.html
+++ b/ch/lessons.html
@@ -270,7 +270,8 @@
               在学习了以上字母和单词后，你可能要想为什么它们读法如此相近，却有不一样的写法？现在我要告诉你关于波兰语拼法的最后一点。<br>
               <br>
               波兰语的写法有一些规则，有时意思会跟着拼法不同而不同。比如，morze是海洋，而może意思是可能，但它们的读法却一样。
-              现在我们先不讨论这些拼法，以后会有别的栏目会解释这一部分。如果你不感兴趣，也可以只记住它们的拼法。</p>
+              现在我们先不讨论这些拼法，以后会有别的栏目会解释这一部分。如果你不感兴趣，也可以只记住它们的拼法。
+            </p>
             <div class="sign">
               <p class="sign--person">编辑</p>
               <a href="about.html" target="_blank">@Kasia</a>
@@ -476,7 +477,8 @@
               <br>
               James nie mówi po polsku. - James不会说波兰语。 (也就是James不说波兰语。)
               <br>
-              有时这个顺序或者附加的单词会因为强调的内容不同而有点不一样。通常句末的词常被强调，比如：</p>
+              有时这个顺序或者附加的单词会因为强调的内容不同而有点不一样。通常句末的词常被强调，比如：
+            </p>
             <br>
 
             <div class="center__item">
@@ -494,7 +496,8 @@
               另一个重要的关键点是 <b>否定形式是通过加nie，也就是不的意思，加在动词的前面。</b>
               <br>
               因为波兰语的动词一定有变化，这就可以在不给主语任何定义时猜测主语是什么。和英语不同，如果在前文已经提到过主语，
-              我们通常<b>不再使用主语</b>,这种情况不仅在口语中出现，书面语中也是如此。 (通常这种情况下使用主语会不自然。).</p>
+              我们通常<b>不再使用主语</b>,这种情况不仅在口语中出现，书面语中也是如此。 (通常这种情况下使用主语会不自然。).
+            </p>
 
             <h3>比如:</h3>
 
@@ -509,7 +512,8 @@
               <br>
               她在吃苹果-> Ona je jabłko. -> Je jabłko. (如果主语在前文已经提到过的话)
               <br>
-              他们在回家的路上。-> Oni idą do domu. -> Idą do domu. (如果主语在前文已经提到过的话)</p>
+              他们在回家的路上。-> Oni idą do domu. -> Idą do domu. (如果主语在前文已经提到过的话)
+            </p>
             <img src="../assets/img/lessons/word-order/odmiana.,png.png" alt="Odmiana"
               class="myImg image-center__center">
             <h3>Questions:</h3>
@@ -527,7 +531,8 @@
               uczę
               języka japońskiego. Mieszkałam w Tokio i w Londynie kiedyś. Warszawa jest nie bardzo duża. Mimo tego to
               miasto lubię. Ono ma dużo parków i starych budynków. Do Warszawy moi znajomi przyjadą niedługo. My na
-              wycieczkę po Warszawie pójdziemy.</p>
+              wycieczkę po Warszawie pójdziemy.
+            </p>
             <br>
 
             <h3>Solution:</h3>
@@ -540,7 +545,8 @@
               <br>
               翻译:
               我的名字是Mariko。我来自日本。现在我住在华沙。我在一个不大的学校工作，教日语。在这之前，我在东京和伦敦住过。
-              华沙不是很大。尽管如此，我喜欢这个城市。他有很多公园和老的建筑。没多久，我的朋友就要来了。我们要在华沙游玩一下。</p>
+              华沙不是很大。尽管如此，我喜欢这个城市。他有很多公园和老的建筑。没多久，我的朋友就要来了。我们要在华沙游玩一下。
+            </p>
             <br>
 
             <h3>词汇</h3>
@@ -577,7 +583,8 @@
               <br>
               <span lang="pl">Wycieczka - 旅行</span>
               <br>
-              Wycieczka po Warszawie - 华沙游 <br></p>
+              Wycieczka po Warszawie - 华沙游 <br>
+            </p>
             <div class="sign">
               <p class="sign--person">编辑</p>
               <a href="about.html" target="_blank">@Weronika</a>
@@ -1094,7 +1101,7 @@
         </div>
         <div class="container">
           <h2 class="unit" style="margin-top: 15px">第2单元</h2>
-          <button class="acc lesson lesson--nominative">Mianownik / 一格</button>
+          <button class="acc lesson lesson--nominative">Mianownik / 主格</button>
           <div class="panel">
             <h2>Mianownik / 一格</h2>
             <p>一格是波兰语语法格中第一个语法格。波兰语叫<i>mianownik</i>。
@@ -1107,7 +1114,7 @@
             <p>根据语法格而变的词类比较多，包括名词，代词，数字与形容词。让下面解释清楚一些我们今天会注意到名词。
             </p>
             <h3>你怎么应该用一格呢?</h3>
-            <p>局子里主语一般是一格：</p>
+            <p>句子里的主语一般是主格：</p>
             <ul class="nominative">
               <li><i><u>Pies</u> jest <span lang="pl">głodny</span>.</i> – – <u>狗</u>饿了。</li>
               <li><i>Moja <u>szkoła</u> jest daleko.</i> – 我的<u>学校</u>（离这里）很远。（代词 moja 也是一格）</li>
@@ -1206,11 +1213,14 @@
                     class="redLetter">sto</span> <span lang="pl"><span class="blue">pięćdziesiąt</span> <span
                       class="green">pięć</span></li>
                 <li><span class="redLetter">1</span><span class="blue">80</span> – <span class="redLetter">sto</span>
-                  <span lang="pl"><span class="blue">osiemdziesiąt</span></li>
+                  <span lang="pl"><span class="blue">osiemdziesiąt</span>
+                </li>
                 <li><span class="redLetter">1</span>0<span class="green">4</span> – <span class="redLetter">sto</span>
-                  <span class="green">cztery</span></li>
+                  <span class="green">cztery</span>
+                </li>
                 <li><span class="redLetter">1</span><span class="green">17</span> – <span class="redLetter">sto</span>
-                  <span lang="pl"><span class="green">siedemnaście</span></li>
+                  <span lang="pl"><span class="green">siedemnaście</span>
+                </li>
               </span>
             </ul>
             <p>几百的数字请看下面： </p>
