--- a/ch/lessons.html
+++ b/ch/lessons.html
@@ -1318,7 +1318,74 @@
             </div>
           </div>
         </div>
-
+        <div class="container">
+          <button class="acc lesson lesson--askingQuestions">问问题</button>
+          <div class="panel">
+            <h2>问问题</h2>
+            <p>知道怎么解释一些事情或陈述事实是很有帮助的。但是作为一个外国人在其他国家，你可能会有很多问题要问！这节课就是意在帮助你解决这个问题-你会学到一些是与否的一般提问法和如何问一些复杂的开放性问题。</p>
+            <p>在我们深入学习语法前，我先说一下波兰人对于问题的态度。不像一些亚洲的语言，会用一些表达礼貌的语法结构。或一些西方语言，比如英式英语，会有很多问题问的比较婉转。波兰人日常会用很多简单而直接的问题。你不需要害怕在大多数情况下问不太好的问题-就用你认为最简单的，我们会很乐于回答。</p>
+            <h3>1.  是/否的问题</h3>
+            <p>这些足够简单到他们可以明白。想一个表示肯定的句子。<br><br>
+              Anna pracuje w banku. -Anna 在银行工作。 <br><br>
+              把这句话变成问句，你有2个方式。 <br>
+              非正式/口语：直接升高你的声调，就像你在英语中问问题一样，或使用中文里的第二声调。 <br>
+              Anna pracuje w banku↑? <br>
+              Anna 在银行工作吗？ <br>
+              表达那些你之前提过，几乎确定的事实，你只是想要对方确认，你可以在句末加上prawda？（对吗？）
+              Anna pracuje w banku, prawda↑? <br>
+              Anna 在银行工作，对吗？/是不是？  <br><br>
+              正式/书面语：在句首加上czy。注意保持提问的语调特征。<br><br>
+              Czy Anna pracuje w banku↑? <br>
+              Anna 在银行工作吗？<br>
+            </p>
+            <h3>2. 开放性问题</h3>
+            <p>这是用来询问一些具体细节的问题。最常见的疑问词，也叫做疑问代词- <span lang="pl">zaimki pytające</span>-它们是：</p>
+            <ul>
+              <li>Co? - 什么？</li>
+              <li>Gdzie? - 哪里？</li>
+              <li><span lang="pl">Dokąd</span>? - 去哪里？</li>
+              <li>Kiedy? -  什么时候？</li>
+              <li>Jak? - 如何？</li>
+              <li>Jaki/Jaka/Jakie? -  哪种？ (阳性/阴性/中性)</li>
+              <li>Który/która/które? - 哪个？(阳性/阴性/中性)</li>
+              <li>Dlaczego? - 为什么？</li>
+              <li>Po co? - 为了什么？</li>
+              <li>Ile? - 多少?</li>
+            </ul>
+            <p>通常词序和常规一样，把疑问词放在句首： <br><br>
+              疑问词+（主语）+动词+宾语 <br><br>
+              注意：仅在无法从上下文得知主语时才使用主语。并且此时不要直接使用第二个人称：ty（你，单数）或wy（你们，复数） <br><br>
+              这个用法在不同的时态里都一样：过去时，现在时，将来时都用一样的问句结构。
+            </p>
+            <ul>
+              <li><b>Co</b> (ty) chcesz na prezent? -  你想要什么当作礼物</li>
+              <li><b>Gdzie</b> mieszka <span lang="pl">twój</span> brat? -  你哥哥/弟弟住在哪里？（目前状态）</li>
+              <li><span lang="pl"><b>Dokąd</b></span> jedziecie na wakacje? -  你要去哪里度假？（将要去的地方）</li>
+              <li><b>Kiedy</b> <span lang="pl">dostałeś tę paczkę</span>? - 你什么时候拿到这个包裹的？</li>
+              <li><b>Jak</b> <span lang="pl">upiekłeś</span> to ciasto? - 你怎么做这个蛋糕？</li>
+              <li><b>Jakie</b> filmy lubisz <span lang="pl">oglądać</span>? -   你喜欢看哪种电影？</li>
+              <li><span lang="pl"><b>Którą</b> porę</span> roku lubisz najbardziej? - 一年里的哪个季节你最喜欢？</li>
+              <li><b>Dlaczego</b> <span lang="pl">wyjechałaś za granicę</span>? -  你为什么要去国外（移民）？（理由是什么？)</li>
+              <li><b>Po co</b> Robert jedzie do Warszawy? -  Robert为了什么要去华沙？（目的是什么）</li>
+              <li><b>Ile</b> mleka mamy w domu? -   我们家还有多少牛奶？</li>
+            </ul>
+            <p>这里有2个疑问代词有词形变化。看词性变化表，找出要使用的词形。<br><br><br>
+              当使用是和代词 <i>kiedy, gdzie, jaki, który</i>一起使用时，动词和主语通常词序交换。顺序是：
+              <br><br>
+              疑问词+动词+（主语）+宾语<br><br>
+              Gdzie jest twoja siostra? - 你的姐姐/妹妹在哪里？ <br>
+              不是 Gdzie twoja siostra jest? <br><br>
+              Kiedy jest jej <span lang="pl">ślub</span>? - 她的婚礼是什么时候？<br>
+              不是 Kiedy jej <span lang="pl">ślub</span> jest? <br><br>
+              这是你会用到的最常见的问题-日常都会用到，现在轮到你练习提问了！试着把之前课程里的句子变成问句的说法，当你有了自信，你就可以自己提问了。正如一句谚语说的-
+              <span lang="pl"><i>nie ma głupich pytań</i></span>（没有愚蠢的问题）
+            </p>
+            <div class="sign">
+              <p class="sign--person">编辑</p>
+              <a href="about.html" target="_blank">@Weronika</a>
+            </div>
+          </div>
+        </div>
         <!--
         <button class="accordion-4">acc lesson 2</button>
         <div class="panel">
