--- a/jp/lessons.html
+++ b/jp/lessons.html
@@ -2414,7 +2414,7 @@
               <li>Kiedy? - いつ？</li>
               <li>Jak? - どのように？</li>
               <li>Jaki/Jaka/Jakie? - どのような？(男性形/女性形/中性形)</li>
-              <li>Który/która/które? - Which? (masculine/feminine/neutral)</li>
+              <li>Który/która/które? - どれ？(男性形/女性形/中性形)</li>
               <li>Dlaczego? - なぜ？</li>
               <li>Po co? - 何のために？</li>
               <li>Ile? - どのくらい？/ いくら？(いくつ？)</li>
