--- a/vi/lessons.html
+++ b/vi/lessons.html
@@ -1473,6 +1473,73 @@
             </div>
           </div>
         </div>
+        <div class="container">
+          <button class="acc lesson lesson--askingQuestions">ĐẶT CÂU HỎI</button>
+          <div class="panel">
+            <h2>ĐẶT CÂU HỎI</h2>
+            <p>Thật tốt nếu biết cách giải thích mọi việc hoặc nêu sự thật. Tuy nhiên, là một người nước ngoài ở một quốc gia khác, bạn có thể sẽ có rất nhiều câu hỏi! Bài học này sẽ giúp các bạn việc đó - bạn sẽ học những điều cơ bản về cách đặt cả câu hỏi có / không đơn giản và các câu hỏi mở phức tạp hơn.</p>
+            <p>Trước khi chúng ta đi sâu vào ngữ pháp, hãy để tôi nói đôi điều về thái độ của người Ba Lan đối với việc đặt câu hỏi. Không giống như nhiều ngôn ngữ châu Á, nơi phải cẩn thận hơn trong việc chọn cấu trúc ngữ pháp lịch sự, hoặc một số ngôn ngữ phương Tây như tiếng Anh Anh, nơi có nhiều câu hỏi ngụ ý gián tiếp, người Ba Lan sử dụng nhiều câu hỏi đơn giản, trực tiếp trong cuộc sống hàng ngày của họ. Bạn không cần phải sợ đặt một câu hỏi trong hầu hết các trường hợp - chỉ cần sử dụng câu hỏi đơn giản nhất mà bạn nghĩ ra và chúng tôi sẽ sẵn lòng trả lời!</p>
+            <h3>1.  CÂU HỎI CÓ / KHÔNG</h3>
+            <p>Đây là những câu hỏi khá đơn giản để xem xét một câu khẳng định.<br><br>
+              Anna pracuje w banku. -Anna làm việc tại một ngân hàng.<br><br>
+              Để biến nó thành một câu hỏi, bạn có 2 lựa chọn. <br>
+              a) Cách nói bình thường: chỉ cần nhấn giọng nói ở đầu hoặc cuối câu. <br>
+              Anna pracuje w banku↑? <br>
+              Anna có làm việc ở ngân hàng không? <br>
+Khi bạn gần như chắc chắn về thực tế đã nói ở trên và chỉ muốn ai đó xác nhận điều đó, bạn hãy thêm <i>prawda?</i> (phải không?) ở cuối câu.
+              Anna pracuje w banku, prawda↑? <br>
+              Anna làm việc tại một ngân hàng, phải không? <br><br>
+              b) Cách viết trang trọng: thêm czy ở đầu câu. Lưu ý rằng đặc điểm ngữ điệu để đặt câu hỏi vẫn còn. <br><br>
+              Czy Anna pracuje w banku↑? <br>
+              Anna có làm việc ở ngân hàng không?<br>
+            </p>
+            <h3>2. CÂU ​​HỎI MỞ ĐẦU</h3>
+            <p>Chúng được sử dụng để hỏi về điều gì đó chi tiết hơn. Các "từ để hỏi" phổ biến nhất, còn được gọi là đại từ nghi vấn - <span lang="pl">zaimki pytające</span> - là:</p>
+            <ul>
+              <li>Co? - Gì?</li>
+              <li>Gdzie? - Ở đâu?</li>
+              <li><span lang="pl">Dokąd</span>? - Đến đâu?</li>
+              <li>Kiedy? - Khi nào?</li>
+              <li>Jak? - Làm sao?</li>
+              <li>Jaki/Jaka/Jakie? -  Loại nào? (Giống đực / giống cái / giống trung )</li>
+              <li>Który/która/które? - Cái nào? (Giống đực / giống cái / giống trung )</li>
+              <li>Dlaczego? - Tại sao?</li>
+              <li>Po co? - Để làm gì?</li>
+              <li>Ile? - Bao nhiêu / nhiều?</li>
+            </ul>
+            <p>Thứ tự từ giống như bình thường, với một câu hỏi được thêm từ ở đầu: <br><br>
+              Câu hỏi từ + (chủ ngữ) + động từ + tân ngữ <br><br>
+              Lưu ý: chỉ bao gồm chủ đề nếu nó không được biết từ ngữ cảnh. Không sử dụng ngôi thứ 2: ty (bạn, số ít) hoặc wy (bạn, số nhiều) một cách rõ ràng. <br><br>
+              Cách sử dụng không khác nhau ở các thì khác nhau: câu quá khứ, hiện tại và tương lai đều có cấu trúc câu hỏi giống nhau.
+            </p>
+            <ul>
+              <li><b>Co</b> (ty) chcesz na prezent? - Bạn muốn quà gì?</li>
+              <li><b>Gdzie</b> mieszka <span lang="pl">twój</span> brat? - Anh bạn sống ở đâu? (đang ở một nơi)</li>
+              <li><span lang="pl"><b>Dokąd</b></span> jedziecie na wakacje? - Bạn định đi đâu trong những ngày nghỉ? (chuyển động đến một nơi)</li>
+              <li><b>Kiedy</b> <span lang="pl">dostałeś tę paczkę</span>? - Bạn nhận được bưu kiện này khi nào?</li>
+              <li><b>Jak</b> <span lang="pl">upiekłeś</span> to ciasto? - Bạn đã nướng chiếc bánh này như thế nào?</li>
+              <li><b>Jakie</b> filmy lubisz <span lang="pl">oglądać</span>? - Những loại phim bạn thích xem? *</li>
+              <li><span lang="pl"><b>Którą</b> porę</span> roku lubisz najbardziej? - Mùa nào trong năm bạn thích nhất? *</li>
+              <li><b>Dlaczego</b> <span lang="pl">wyjechałaś za granicę</span>? - Tại sao bạn lại ra nước ngoài (di cư)? (lý do là gì?)</li>
+              <li><b>Po co</b> Robert jedzie do Warszawy? - Robert đến Warsaw để làm gì? (mục đích của anh ta là gì?)</li>
+              <li><b>Ile</b> mleka mamy w domu? - Nhà mình có bao nhiêu sữa?</li>
+            </ul>
+            <p>* 2 đại từ nghi vấn này là đối tượng của cách ngữ pháp. Xem bảng 7 cách ngữ pháp để biết mẫu nào sẽ sử dụng.<br><br><br>
+              Khi sử dụng động từ to be với các đại từ  <i>kiedy, gdzie, jaki, który</i>động từ và chủ ngữ thường bị đảo ngược. Thứ tự là:
+              <br><br>
+              Câu hỏi từ + động từ + (chủ ngữ) + tân ngữ <br><br>
+              Gdzie jest twoja siostra? - Chị của bạn ở đâu? <br>
+              KHÔNG phải Gdzie twoja siostra jest? <br><br>
+              Kiedy jest jej <span lang="pl">ślub</span>? - Đám cưới của cô ấy là khi nào? <br>
+              KHÔNG phải Kiedy jej <span lang="pl">ślub</span> jest? <br><br>
+              Đây là những câu hỏi phổ biến nhất mà bạn sẽ sử dụng - chúng bao gồm hầu hết các tình huống hàng ngày. Bây giờ, đến lượt bạn thực hành hỏi chúng! Cố gắng chuyển các câu từ các bài học trước thành câu trước, và khi bạn có được sự tự tin, bạn có thể bắt đầu hỏi câu của riêng mình. Như tục ngữ nói - <span lang="pl"><i>nie ma głupich pytań</i></span>! (Không có câu hỏi nào là ngu ngốc!)
+            </p>
+            <div class="sign">
+              <p class="sign--person">Được viết bởi</p>
+              <a href="about.html" target="_blank">@Weronika</a>
+            </div>
+          </div>
+        </div>
         <!-- <button class="accordion-4">acc lesson 3</button>
         <div class="panel">
           <h2>acc lesson 3</h2><br>
