--- a/ch/index.html
+++ b/ch/index.html
@@ -76,6 +76,27 @@
                     <div class="content content--news">
                         <div class="box-news__item">
                             <div class="box-news">
+                                <h2>聖誕節快樂</h2>
+                                <p class="data"> 2020年12月24日 | 编辑: <a href="about.html" target="_blank"
+                                        class="author">@Robert</a></p>
+                                <img src="./../assets/img/embl/christmas.jpg" alt="christmas with SARO"
+                                    class="image-left__center" />
+                                <p>
+                                    大家好！! <br>
+                                    我希望你们有一个美好的圣诞夜。 <br>
+                                    我们更新了关于波兰圣诞的文章，和新的课程，作为圣诞礼物送给你。
+
+                                </p>
+                                <a href="lessons.html">* 问题</a> <br>
+                                <a href="stuff/traditions.html">* 圣诞文章</a> <br>
+                                <p style="margin-bottom: 2px">
+                                    祝好
+                                </p>
+                                <b>SARO全体成员</b>
+                            </div>
+                        </div>
+                        <div class="box-news__item">
+                            <div class="box-news">
                                 <h2>12月更新</h2>
                                 <p class="data">2020年11月21日|编辑：<a href="about.html" target="_blank"
                                         class="author">@Robert</a></p>
