--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
     <link rel="stylesheet" href="./assets/style/css/style.css">
     <title>Welcome to SARO</title>
-    <script async src="./assets/js/index.js"></script>
+    <!-- <script async src="./assets/js/index.js"></script> -->
 </head>
 
 <body>
@@ -74,6 +74,26 @@
                 <h1>News</h1>
                 <article>
                     <div class="content content--news">
+                        <div class="box-news__item">
+                            <div class="box-news">
+                                <h2>Merry Christmas!</h2>
+                                <p class="data"> 24.12.2020 | author: <a href="about.html" target="_blank"
+                                        class="author">@Robert</a></p>
+                                <img src="./assets/img/embl/christmas.jpg" alt="christmas with SARO"
+                                    class="image-left__center" />
+                                <p>
+                                    Hello guys! <br>
+                                    I hope you guys spent christmas eve well! <br>
+                                    As a gift we got for you special article about Christmas in Poland and a new lesson!
+                                </p>
+                                <a href="lessons.html">* Questions</a> <br>
+                                <a href="stuff/traditions.html">* Christmas article</a> <br>
+                                <p style="margin-bottom: 2px">
+                                    Best wishes!
+                                </p>
+                                <b>SARO CREW</b>
+                            </div>
+                        </div>
                         <div class="box-news__item">
                             <div class="box-news">
                                 <h2>Update december :)</h2>
