--- a/vi/index.html
+++ b/vi/index.html
@@ -75,6 +75,28 @@
                     <div class="content content--news">
                         <div class="box-news__item">
                             <div class="box-news">
+                                <h2>Giáng sinh vui vẻ</h2>
+                                <p class="data"> 24.12.2020 | Tác giả: <a href="about.html" target="_blank"
+                                        class="author">@Robert</a></p>
+                                <img src="./../assets/img/embl/christmas.jpg" alt="christmas with SARO"
+                                    class="image-left__center" />
+                                <p>
+                                    Xin chào các bạn!<br>
+                                    Chúng tôi hy vọng bạn có một giáng sinh ấm áp! <br>
+                                    Chúng tôi có một món quà cho bạn, đó là một bài học mới và bài viết về Giáng Sinh ở
+                                    Ba Lan!
+
+                                </p>
+                                <a href="lessons.html">* Câu hỏi</a> <br>
+                                <a href="stuff/traditions.html">* Bài viết về giáng sinh</a> <br>
+                                <p style="margin-bottom: 2px">
+                                    Giáng sinh an lành!
+                                </p>
+                                <b>ĐỘI NGŨ SARO</b>
+                            </div>
+                        </div>
+                        <div class="box-news__item">
+                            <div class="box-news">
                                 <h2>Các bài học mới!</h2>
                                 <p class="data"> 06.12.2020 | Tác giả: <a href="about.html" target="_blank"
                                         class="Tác giả">@Robert</a></p>
@@ -197,7 +219,8 @@
                                         href="https://www.facebook.com/SARO-Free-Polish-Bài học-106067287815397"
                                         target="_blank"> Facebook</a> và <a href="https://instagram.com/sarowebsite/"
                                         target="_blank"> instagram</a> để cùng cập nhật những dự án mới nhất và cùng
-                                    khám phá Ba Lan với chúng tôi </p>
+                                    khám phá Ba Lan với chúng tôi
+                                </p>
                             </div>
                         </div>
                     </div>
