--- a/ch/index.html
+++ b/ch/index.html
@@ -65,8 +65,8 @@
     <main>
         <section class="index-banner">
             <div class="vertical-center">
-                <h2>SARO是一个免费学习<br>波兰语的网站</h2>
-                <h1>Join us</h1>
+                <h2>聖誕節快樂</h2>
+                <h1>~SARO工作人员</h1>
             </div>
         </section>
         <section class="home">
