--- a/jp/index.html
+++ b/jp/index.html
@@ -69,8 +69,8 @@
     <main>
         <section class="index-banner">
             <div class="vertical-center">
-                <h2>SARO is a website with free <br>Polish lessons</h2>
-                <h1>Join us</h1>
+                <h2>メリークリスマス</h2>
+                <h1>~SAROスタッフ</h1>
             </div>
         </section>
         <section class="home">
