--- a/vi/index.html
+++ b/vi/index.html
@@ -62,10 +62,16 @@
         <script src="./../assets/js/menu.js"></script>
     </header>
     <main>
-        <section class="index-banner">
+        <!-- <section class="index-banner">
             <div class="vertical-center">
                 <h2>SARO là một trang web với <br>các bài học tiếng Ba Lan miễn phí</h2>
                 <h1>Tham gia SARO</h1>
+            </div>
+        </section> -->
+        <section class="index-banner">
+            <div class="vertical-center">
+                <h2>Giáng sinh vui vẻ</h2>
+                <h1>~Đội ngũ SAROw</h1>
             </div>
         </section>
         <section class="home">
