--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
     <main>
         <section class="index-banner">
             <div class="vertical-center">
-                <h2>SARO is a website with free <br>Polish lessons</h2>
-                <h1>Join us</h1>
+                <h2>Marry christmas</h2>
+                <h1>~Saro crew</h1>
             </div>
         </section>
         <section class="home">
